<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_Usuario"
    android:orientation="vertical"
    android:background="@mipmap/playa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/regreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="350dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/blanco"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_reg1"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="45dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textSize="36sp"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_reg2"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:background="@drawable/fondoredond">

        <EditText
            android:id="@+id/correo_usuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="48dp"
            android:layout_marginLeft="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/nom"/>
        <EditText
            android:id="@+id/nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="48dp"
            android:layout_marginLeft="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/corre_ele"/>
        <EditText
            android:id="@+id/contra_usuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="48dp"
            android:layout_marginLeft="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/contra"/>
        <EditText
            android:id="@+id/confir_contra"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="48dp"
            android:layout_marginLeft="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/confir_contra"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acep_ter"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/blacki"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="10dp"
            android:text="@string/crear_cuenta_reg"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>