<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Futuros_viajes"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/regreso"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="300dp"
                android:src="@mipmap/verde" />

            <ImageView
                android:src="@mipmap/Recurso"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="2dp"/>
        </GridLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/proxivia"
            android:textColor="@color/principal_green"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/echa"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="359dp"
            android:src="@mipmap/viajes" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:background="@drawable/fondoredond">

        <Button
            android:id="@+id/agendar"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/buttonredondo2"
            android:gravity="center"
            android:text="@string/agenda"
            android:textColor="@color/white"
            android:textSize="10sp" />
        <Button
            android:id="@+id/inicio"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="120dp"
            android:gravity="center"
            android:background="@drawable/buttonredondo2"
            android:text="@string/volver"
            android:textColor="@color/white"
            android:textSize="10sp"/>

    </LinearLayout>

</LinearLayout>