<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pantalla_Principal"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="vertical">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/regreso"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/puntos"/>
            <TextView
                android:id="@+id/bienvenida"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/hola"/>
            <ImageView
                android:src="@mipmap/Recurso"
                android:layout_marginTop="2dp"/>
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/viaje"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/encuentra"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>